<resources>
    <string name="app_name">HandyMaps</string>
    <string name="hint">Search...</string>
    <string name="start">Start Navigation</string>
    <string name="find">Find Route</string>
    <string name="clear">Clear</string>
    <string name="title">Search</string>

    <string name="access_token" translatable="false">pk.eyJ1IjoidGlhbmF0b25udSIsImEiOiJjanUzMnN2NWgwaXNwM3lydmF2eWloeHZyIn0.c04-FzQQrto2fimOF5a_zg</string>
    <string name="user_location_permission_explanation">This app needs location permissions to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>

    <string name="action_settings">Settings</string>
    <string name="my_schedule">My Schedule</string>
    <string name="add_a_class">+ Add a class</string>
    <string name="schedule_hint">Search for a class to add</string>
    <string name="schedule">Schedule</string>
    <string name="edit">edit</string>
    <string name="scheduleName">My Schedule</string>
    <string name="my_courses">My Courses</string>
    <string name="find_class">Find Class</string>
    <string name="delete">Remove Course</string>
    <string name="save">Save Changes</string>
    <string name="large_text">Insert Large Text Here</string>
</resources>